--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.16.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
@@ -28,8 +29,10 @@
     "react-dom": "^18.3.1",
     "react-quizlet-flashcard": "^3.0.0",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.0.23",
     "react-router-dom": "^6.26.0",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
